# my_slm_adventures

./: .env.example  .gitignore  AGENTS.md  README.md  harness.py  prd.md  pyproject.toml
.hermes/plans/: 2026-06-12_073900-specguard-ai.md  (+1 more)
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_semantic.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json
issues/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  058_blueprint_dataclasses.md
projects/specguard/: .env.example  README.md  pyproject.toml
projects/specguard/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
projects/specguard/frontend/src/: App.tsx  Router.tsx  api.ts  main.tsx  styles.css  types.ts
projects/specguard/frontend/src/components/: MarkdownView.tsx
projects/specguard/frontend/src/pages/: GeneratePage.tsx  HistoryPage.tsx  SettingsPage.tsx
projects/specguard/graphify-out/cache/: stat-index.json
projects/specguard/src/specguard/: __init__.py  agent.py  cli.py  config.py  llm_gateway.py  persistence.py  pipeline.py  router.py  rubrics.py  server.py  validators.py
projects/specguard/src/specguard/roles/: __init__.py  critic.py  planner.py  writer.py
projects/specguard/src/specguard/standards/: __init__.py  brd.md  prd.md  tech_scope.md
projects/specguard/src/specguard/tools/: domain_checklist.py
projects/specguard/tests/: test_agent_smoke.py  test_cli.py  test_config.py  test_critic.py  test_llm_gateway.py  test_pipeline.py  test_pipeline_multirole.py  test_pipeline_stream.py  test_planner.py  test_router.py  test_rubrics.py  test_server.py  test_standards.py  test_tools.py  test_validators.py  test_writer.py
tests/: test_prompts.py  test_rubrics.py  test_tools.py
(+11 files in other folders)
